--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "r8r--backend",
+  "name": "wsl-test-app",
   "version": "0.0.1",
   "private": true,
   "type": "module",
@@ -11,14 +11,13 @@
     "typecheck": "tsc"
   },
   "dependencies": {
-    "@ponder/core": "^0.1.7",
-    "openai": "^4.24.7",
+    "@ponder/core": "^0.2.2",
     "viem": "^1.19.3"
   },
   "devDependencies": {
     "@types/node": "^20.9.0",
     "eslint": "^8.53.0",
-    "eslint-config-ponder": "^0.1.7",
+    "eslint-config-ponder": "^0.2.2",
     "typescript": "^5.2.2"
   },
   "engines": {
